istio-config/node-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: petclinic-gateway
  namespace: default
spec:
  selector:
    istio: ingress
  servers:
  - port:
      name: http1
      number: 8080
      protocol: HTTP
    hosts:
      - deployment-app1-petclinic-simple-chart.default.svc.cluster.local
  - port:
      name: http2
      number: 80
      protocol: HTTP
    hosts:
      - deployment-app2-petclinic-simple-chart.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petclinic-routing
  namespace: default
spec:
  hosts:
  - deployment-app1-petclinic-simple-chart.default.svc.cluster.local
  - deployment-app2-petclinic-simple-chart.default.svc.cluster.local
  gateways:
    - petclinic-gateway
  http:
  - name: "route-config-1"
    match:
    - uri:
        prefix: /app1
    rewrite:
      uri: /
    route:
    - destination:
        host: deployment-app1-petclinic-simple-chart
        port:
          number: 8080
  - name: "route-config-2"
    match:
    - uri:
        prefix: /app2
    rewrite:
      uri: /
    route:
    - destination:
        host: deployment-app2-petclinic-simple-chart
        port:
          number: 80
